<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">MatApp</string>

    <!-- Buttons & Textlinks -->
    <string name="btn_save">speichern</string>
    <string name="btn_loan">ausleihen</string>
    <string name="btn_create">erstellen</string>
    <string name="btn_update">Änderungen speichern</string>
    <string name="btn_return">Rückgabe</string>
    <string name="btn_delete">löschen</string>
    <string name="btn_cancel">abbrechen</string>
    <string name="link_delete">Artikel löschen</string>
    <string name="link_cancel">Änderungen verwerfen</string>

    <string name="btn_next">show detail</string>
    <string name="db_error">Datenbank-Fehler</string>


    <!-- Material Detail -->
    <string name="det_title">Bezeichnung des Gegenstands</string>
    <string name="det_title_error">Bitte Bezeichnung des Gegenstands eingeben</string>
    <string name="det_desc">Kurzbeschrieb des Gegenstands</string>
    <string name="det_owner">Name Verantwortlicher</string>
    <string name="det_location">Standort des Gegenstands</string>
    <string name="det_status">Ausleihstatus</string>
    <string name="det_status_available">Gegenstand verfügbar</string>
    <string name="det_status_lent">Gegenstand ausgeliehen</string>
    <string name="det_status_unavailable">Gegenstand nicht verfügbar</string>
    <string name="det_status_prompt">bitte Status wählen</string>
    <string name="det_position">Position des Elements</string>
    <string name="det_barcode">keine Barcode Nummer</string>
    <string name="det_barcode_number">Barcode Nummer: </string>

    <string name="det_loan_sub">Informationen zur Ausleihe</string>
    <string name="det_loan_name">Ausgeliehen an</string>
    <string name="det_loan_name_error">Bitte Name eingeben</string>
    <string name="det_loan_contact">Kontaktdaten (Mail oder Mobile)</string>
    <string name="det_loan_until">voraussichtlich ausgeliehen bis </string>
    <string name="det_loan_note">Notiz zur Ausleihe hinzufügen</string>

    <string name="det_title_label">Bezeichnung</string>
    <string name="det_desc_label">Kurzbeschrieb</string>
    <string name="det_owner_label">Verantwortlicher </string>
    <string name="det_location_label">Standort</string>
    <string name="det_barcode_label">Barcode</string>
    <string name="det_status_label">Ausleihstatus</string>
    <string name="det_loan_name_label">Ausleiher</string>
    <string name="det_loan_contact_label">Kontaktdaten</string>
    <string name="det_loan_until_label">voraussichtliche Rückgabe</string>
    <string name="det_loan_note_label">Notiz zur Ausleihe</string>

    <string name="det_title_hint">Bezeichnung des Gegenstands</string>
    <string name="det_desc_hint">Kurzbeschrieb des Gegenstands</string>
    <string name="det_owner_hint">Name Verantwortlicher </string>
    <string name="det_location_hint">Standort des Gegenstands </string>
    <string name="det_loan_name_hint">Name des Ausleihers </string>
    <string name="det_loan_contact_hint">Kontaktdaten (Mail/Tel)</string>
    <string name="det_loan_until_hint">voraussichtliche Rückgabe</string>
    <string name="det_loan_note_hint">Notiz zur Ausleihe</string>

    <string name="link_gps">GPS Position</string>
    <string name="link_barcode">+ Barcode</string>

    <!-- Material Edit -->
    <string name="edit_saved">Änderungen wurden gespeichert</string>


    <!-- Delete Alert Dialog -->
    <string name="delete_item_title">Artikel löschen?</string>
    <string name="delete_item_text">Wollen Sie diesen Artikel wirklich löschen? Diese Aktion kann nicht rückgängig gemacht werden.</string>
    <string name="delete_item_deleted">Artikel gelöscht</string>


    <!-- Loan Dialog -->
    <string name="loan_dialog_title">Material ausleihen</string>
    <string name="loan_dialog_text">Noch mehr Text zur Ausleihe...</string>
    <string name="loan_txt">ausleihen</string>


    <!-- Scan menu labels -->
    <string name="turn_on_flashlight">Licht an</string>
    <string name="turn_off_flashlight">Licht aus</string>
    <string name="scan_bar_code">Scanne einen Strichcode</string>
    <string name="item_notFound">Artikel nicht gefunden</string>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_app_name">MatApp Menü</string>
    <string name="nav_home">MatApp Home</string>
    <string name="nav_scanner">Strichcode-Scanner</string>
    <string name="nav_matlist">Materialübersicht</string>
    <string name="nav_subtitle">weitere Funktionen</string>
    <string name="nav_users">Benutzerverwaltung</string>
    <string name="nav_settings">Einstellungen</string>
    <string name="nav_logout">Abmelden</string>

    <string name="drawer_open">Öffne Navigation</string>
    <string name="drawer_close">Schliesse Navigation</string>


    <!-- Menu Item & Tabbar labels -->
    <string name="mi_scanner">Strichcode-Scanner</string>
    <string name="mi_matlist">Materialübersicht</string>
    <string name="tabbar_matlist">Übersicht</string>


    <!-- Login Fragment -->
    <string name="login_emailText">Email</string>
    <string name="login_passwordText">Passwort</string>
    <string name="login_listNameText">Verzeichnis-Name</string>
    <string name="login_loginBtn">Anmelden</string>
    <string name="login_registerBtn">Registrieren</string>
    <string name="login_loginSuccessful">Anmeldung erfolgreich</string>
    <string name="login_loginFailed">Anmeldung nicht möglich</string>
    <string name="login_listCreated">Neues Verzeichnis erstellt</string>
    <string name="login_registerSuccessful">Neues Konto erstellt. Sie können sich jetzt anmelden.</string>
    <string name="login_registerFailed">Registrierung nicht möglich</string>
    <string name="login_missingList">Verzeichnis-Name fehlt</string>
    <string name="login_missingEmail">Email fehlt</string>
    <string name="login_shortPassword">Passwort zu kurz (min. 6 Zeichen)</string>
    <string name="login_backBtn">Klicken Sie ein zweites Mal auf Zurück, um die App zu schliessen.</string>
    <string name="login_loginProgress">Anmeldung läuft...</string>
    <string name="login_registerProgress">Registrierung läuft...</string>

    <!-- List View first Use -->
    <string name="first_use_title">Herzlich willkommen bei MatApp! </string>
    <string name="first_use_text">MatApp hilft Ihnen beim Verwalten von Gegenständen. Fügen Sie mit dem Button rechts unten Gegenstände zu Ihrer Liste hinzu.</string>

</resources>
