<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Image Section on Top -->
        <LinearLayout
            android:id="@+id/viewPic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:background="?attr/colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_mat_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollViewDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4" >

            <LinearLayout
                android:id="@+id/viewDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <!-- Input Fields & Labels -->
                <TextView
                    android:id="@+id/det_title_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textIsSelectable="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/det_title_label" />

                <EditText
                    android:id="@+id/det_title_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor ="?attr/colorPrimaryDark"
                    android:textStyle="bold"
                    android:hint="@string/det_title_hint" />

                <TextView
                    android:id="@+id/det_desc_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textIsSelectable="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/det_desc_label" />

                <EditText
                    android:id="@+id/det_desc_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/det_desc_hint" />

                <!-- Barcode Section -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/det_barcode_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:text="@string/det_barcode_label"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/det_barcode_edit"
                        android:inputType="none"
                        android:editable="false"
                        android:id="@+id/barcode_result"
                        android:hint="@string/det_barcode" />

                    <Button
                        android:id="@+id/btn_add_barcode"
                        style="@style/matapp_button_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_margin="6dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:onClick="addBarcode"
                        android:text="@string/link_barcode" />

                </RelativeLayout>


                <TextView
                    android:id="@+id/det_owner_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textIsSelectable="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/det_owner_label" />

                <EditText
                    android:id="@+id/det_owner_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/det_owner_hint" />

                <TextView
                    android:id="@+id/det_location_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textIsSelectable="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/det_location_label" />

                <EditText
                    android:id="@+id/det_location_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/det_location_hint" />

                <TextView
                    android:id="@+id/det_status_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textIsSelectable="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/det_status_label" />

                <Spinner
                    android:id="@+id/det_status_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:entries="@array/det_status_dropdown"
                    android:prompt="@string/det_status_prompt"
                    android:spinnerMode="dropdown" />

                <!-- Input Fields regarding Loan -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:id="@+id/det_loan"
                    android:text="@string/det_loan_sub" />

                <TextView
                    android:id="@+id/det_loan_name_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textIsSelectable="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/det_loan_name_label" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/det_loan_name_edit"
                    android:hint="@string/det_loan_name_hint"/>

                <TextView
                    android:id="@+id/det_loan_contact_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textIsSelectable="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/det_loan_contact_label" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/det_loan_contact_edit"
                    android:hint="@string/det_loan_contact_hint"/>

                <TextView
                    android:id="@+id/det_loan_until_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textIsSelectable="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/det_loan_until_label" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/det_loan_until_edit"
                    android:hint="@string/det_loan_until_hint"/>

                <TextView
                    android:id="@+id/det_loan_note_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textIsSelectable="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/det_loan_note_label" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/det_loan_note_edit"
                    android:hint="@string/det_loan_note_hint"/>

                <!-- Buttons -->
                <Button
                    android:id="@+id/btn_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/matapp_button"
                    android:layout_marginTop="24dp"
                    android:onClick="onCreateItem"
                    android:text="@string/btn_create" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView >

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:onClick="onAddImg"
        android:src="@drawable/ic_camera_alt_white_24dp"
        app:layout_anchor="@id/viewPic"
        app:layout_anchorGravity="bottom|right|end"/>


</android.support.design.widget.CoordinatorLayout>

